Start static pages

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,8 @@ html
     link(rel="stylesheet", href="https://cdn.colorlib.com/shapely/wp-content/themes/shapely/style.css?ver=4.8")
     link(rel="stylesheet", href="https://cdn.colorlib.com/shapely/wp-content/themes/shapely/js/owl-carousel/owl.carousel.min.css?ver=4.8")
     link(rel="stylesheet", href="https://cdn.colorlib.com/shapely/wp-content/themes/shapely/js/owl-carousel/owl.theme.default.css?ver=4.8")
+    link(rel="stylesheet", href="/css/main.css")
+    style(type='text/css').
+      .cf-hidden { display: none; } .cf-invisible { visibility: hidden; }
   body
-    h1 SearchTt
     block content
