--- a/views/index.pug
+++ b/views/index.pug
@@ -1,90 +1,23 @@
 extends layout
 
 block content
+
   .parallax-mirror(style='visibility: hidden; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden; transform: translate3d(0px, 0px, 0px); height: 474px; width: 1280px;')
     img.parallax-slider(src='https://cdn.colorlib.com/shapely/wp-content/uploads/sites/12/2016/12/photo-1451417379553-15d8e8f49cde.jpg', scale='0', style='transform: translate3d(0px, 0px, 0px); position: absolute; left: 0px; height: 909px; width: 1280px; max-width: none;')
   .parallax-mirror(style='visibility: hidden; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden; transform: translate3d(0px, 0px, 0px); height: 434px; width: 1280px;')
     img.parallax-slider(src='https://cdn.colorlib.com/shapely/wp-content/uploads/sites/12/2016/12/photo-1452723312111-3a7d0db0e024.jpg', scale='0', style='transform: translate3d(0px, 0px, 0px); position: absolute; left: 0px; height: 909px; width: 1280px; max-width: none;')
   .parallax-mirror(style='visibility: visible; z-index: -100; position: fixed; top: 56px; left: 0px; overflow: hidden; transform: translate3d(0px, 0px, 0px); height: 646px; width: 1280px;')
-    img.parallax-slider(src='https://cdn.colorlib.com/shapely/wp-content/uploads/sites/12/2016/03/photo-1443527216320-7e744084f5a7-1.jpg', scale='0', style='transform: translate3d(0px, 0px, 0px); position: absolute; top: -303.8px; left: 0px; height: 854px; width: 1280px; max-width: none;')
-  #page.site
-    header#masthead.site-header(role='banner')
-      .nav-container
-        nav#site-navigation.main-navigation.outOfSight.fixed.scrolled(role='navigation')
-          .container.nav-bar
-            .row
-              .module.left.site-title-container
-                a(href='https://colorlib.com/shapely/')
-                  span.site-title Narciso
-              .module.widget-handle.mobile-toggle.right.visible-sm.visible-xs
-                i.fa.fa-bars
-              .module-group.right
-                .module.left
-                  .collapse.navbar-collapse.navbar-ex1-collapse
-                    ul#menu.menu
-                      li.menu-item.menu-item-type-custom.menu-item-object-custom.current-menu-item.current_page_item.menu-item-home.active
-                        a(href='/') Home
-                      li.menu-item.menu-item-type-post_type.menu-item-object-page
-                        a(href='https://github.com/narcisoguillen/stt') Github
-                      li.menu-item.menu-item-type-custom.menu-item-object-custom
-                        a(href='https://www.linkedin.com/in/narciso-guillen-86b9092b/') Linkedin
-                      li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children.dropdown
-                        a.dropdown-toggle(href='#', data-toggle='dropdown') About The Server
-                        ul.dropdown-menu(role='menu')
-                          li.menu-item.menu-item-type-post_type.menu-item-object-page
-                            a(href='http://expressjs.com/') Express
-                          li.menu-item.menu-item-type-post_type.menu-item-object-page
-                            a(href='http://passportjs.org/') Passport
-                          li.menu-item.menu-item-type-post_type.menu-item-object-page
-                            a(href='https://www.mongodb.com/') MongoDB
 
+    img.parallax-slider(src='http://www.planwallpaper.com/static/images/Wallpaper-HD-10.jpg', scale='0', style='transform: translate3d(0px, 0px, 0px); position: absolute; top: -303.8px; left: 0px; height: 854px; width: 1280px; max-width: none;')
 
+  .site
+    include navbar
 
-
-
-                          li#menu-item-1641.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1641
-                            a(title='Page with comments', href='https://colorlib.com/shapely/about/page-with-comments/') Page with comments
-                          li#menu-item-1642.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1642
-                            a(title='Page with comments disabled', href='https://colorlib.com/shapely/about/page-with-comments-disabled/') Page with comments disabled
-                      li#menu-item-1643.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children.menu-item-1643.dropdown
-                        a.dropdown-toggle(title='Level 1', href='https://colorlib.com/shapely/level-1/', data-toggle='dropdown') Level 1
-                        ul.dropdown-menu(role='menu')
-                          li#menu-item-1644.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children.menu-item-1644.dropdown
-                            a(title='Level 2', href='https://colorlib.com/shapely/level-1/level-2/') Level 2
-                            ul.dropdown-menu(role='menu')
-                              li#menu-item-1645.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1645
-                                a(title='Level 3', href='https://colorlib.com/shapely/level-1/level-2/level-3/') Level 3
-                              li#menu-item-1699.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1699
-                                a(title='Level 3a', href='https://colorlib.com/shapely/level-1/level-2/level-3a/') Level 3a
-                              li#menu-item-1700.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1700
-                                a(title='Level 3b', href='https://colorlib.com/shapely/level-1/level-2/level-3b/') Level 3b
-                          li#menu-item-1701.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1701
-                            a(title='Level 2a', href='https://colorlib.com/shapely/level-1/level-2a/') Level 2a
-                          li#menu-item-1702.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1702
-                            a(title='Level 2b', href='https://colorlib.com/shapely/level-1/level-2b/') Level 2b
-                      li#menu-item-1646.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children.menu-item-1646.dropdown
-                        a.dropdown-toggle(title='Lorem', href='https://colorlib.com/shapely/lorem-ipsum/', data-toggle='dropdown') Lorem
-                        ul.dropdown-menu(role='menu')
-                          li#menu-item-1703.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1703
-                            a(title='Page A', href='https://colorlib.com/shapely/page-a/') Page A
-                          li#menu-item-1704.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-1704
-                            a(title='Page B', href='https://colorlib.com/shapely/page-b/') Page B
-                // end of menu module
-                .module.widget-handle.search-widget-handle.left.hidden-xs.hidden-sm
-                  .search
-                    i.fa.fa-search
-                    span.title Site Search
-                  .function
-                    form#searchform.search-form(role='search', method='get', action='https://colorlib.com/shapely/')
-                      label.screen-reader-text(for='s') Search for:
-                      input#s(type='text', placeholder='Type Here', value='', name='s')
-                      input#searchsubmit.btn.btn-fillded.searchsubmit(type='submit', value='Search')
-              // end of module group
-        // #site-navigation
     // #masthead
     #content.main-container
       section.content-area
-        #main(role='main')
+        #main
+
           #shapely_home_parallax-2.widget.shapely_home_parallax
             section.cover.fullscreen.image-bg
               .parallax-window.fullscreen(data-parallax='scroll', data-image-src='https://cdn.colorlib.com/shapely/wp-content/uploads/sites/12/2016/03/photo-1443527216320-7e744084f5a7-1.jpg')
@@ -92,14 +25,15 @@ block content
                   .row
                     .top-parallax-section
                       .col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1.text-center
-                        h1 We Change Everything WordPress
-                        p.mb32 This is the only WordPress theme you will ever want to use.
-                        a.btn.btn-lg.btn-white(href='#') Download Now
-                        a.btn.btn-lg.btn-filled(href='#') Read More
+                        h1 Coding web apps with love
+                        p.mb32 Doing nodejs since 2010.
+                        a.btn.btn-lg.btn-white Login in
+                        a.btn.btn-lg.btn-filled Register
                     // end of row
             .clearfix
+
           #shapely_home_parallax-3.widget.shapely_home_parallax
-            section
+            section.bg-secondary
               .container
                 .row.align-children
                   .col-md-7.col-sm-6.text-center.mb-xs-24
@@ -109,9 +43,10 @@ block content
                       h3 SEO Friendly
                       p.mb32
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar luctus sem, eget porta orci. Maecenas molestie dui id diam feugiat, eu tincidunt mauris aliquam. Duis commodo vitae ligula et interdum. Maecenas faucibus mattis imperdiet. In rhoncus ac ligula id ultricies.
-                      a.btn.btn-lg.btn-filled(href='#') Read more
+                      a.btn.btn-lg.btn-filled(href='https://prerender.io/') Read more
                   // end of row
             .clearfix
+
           #shapely_home_parallax-4.widget.shapely_home_parallax
             section.bg-secondary
               .container
